SERVER-46190 Disallow dbHash for nodes in RECOVERING state