jstests/replsets/db_reads_while_recovering_all_commands.js
@@ -113,6 +113,8 @@ const allCommands = {
     dbCheck: {skip: isPrimaryOnly},
     dbHash: {
         command: {dbHash: 1},
+        expectFailure: true,
+        expectedErrorCode: ErrorCodes.NotMasterOrSecondary,
     },
     dbStats: {
         command: {dbStats: 1},
